--- a/src/webapps/webclient/webapp/package.json
+++ b/src/webapps/webclient/webapp/package.json
@@ -16,9 +16,11 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "react": "^18.2.0",
+    "react-aria": "^3.22.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-stately": "^3.20.0",
     "theme-ui": "^0.15.4",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
