--- a/src/Ency.Server/Ency.Server.csproj
+++ b/src/Ency.Server/Ency.Server.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Htmx" Version="1.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.1" />
   </ItemGroup>
 
